--- a/reduce,map,filter.html
+++ b/reduce,map,filter.html
@@ -56,7 +56,7 @@
     function filterfunction(elements2, callbackk) {
         var filternumbers = [];
         var z;
-        for (var j = 0; j < numbers2.length; j++) {
+        for (var j = 0; j < elements2.length; j++) {
             var v = numbers2[j];
             z = callbackk(v, j);
             if (z) {
