--- a/reduce,map,filter.html
+++ b/reduce,map,filter.html
@@ -77,8 +77,8 @@
 <!--reduce方法-->
 <script>
     var numbers3 = [1, 2, 1, 1, 1, 1, 1, 1];
-    function reducefunction(elements, callbackkk) {
-        var temporary=numbers3;
+    function reducefunction(elements3, callbackkk) {
+        var temporary=elements3 ;
         var d;
         var total;
         for (var k = 1; k < temporary.length; k++) {
